# core

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .yamllint.yml  README.md  devfile.yaml  flake.nix  galaxy.yml  justfile  pyproject.toml  requirements.yml  tox-ansible.ini
.devcontainer/: devcontainer.json
.devcontainer/docker/: devcontainer.json
.devcontainer/podman/: devcontainer.json
.github/workflows/: release.yml  tests.yml
changelogs/: config.yaml
docs/docsite/: links.yml
extensions/: justfile
extensions/molecule/default/: converge.yml  create.yml  molecule.yml  prepare.yml  requirements.yml
plugins/filter/: hello_world.py
roles/about/defaults/: main.yml
roles/about/tasks/: main.yml
roles/about/templates/: about.sh
roles/about/tests/: test.yml
roles/disable_firewall/tasks/: main.yml
roles/extra_os_repos/defaults/: main.yml
roles/extra_os_repos/tasks/: inst_OracleLinux_8.yml  inst_OracleLinux_9.yml  inst_RedHat_8.yml  inst_RedHat_9.yml  main.yml
roles/has_oracle/defaults/: main.yml
roles/has_oracle/meta/: argument_specs.yml
roles/has_oracle/tasks/: main.yml
roles/has_oracle/templates/: about.txt  oracle_prompt.sh  oraenv_aliases.sh  tnsnames.j2
roles/hugepages/defaults/: main.yml
roles/hugepages/tasks/: main.yml
roles/hugepages/templates/: hugepages_settings.sh
roles/jobsub_users/defaults/: main.yml
roles/jobsub_users/meta/: argument_specs.yml
roles/jobsub_users/tasks/: main.yml
roles/login_banner/defaults/: main.yml
roles/login_banner/meta/: main.yml  (+1 more)
roles/run/: README.md
tests/unit/: test_basic.py
(+39 files in other folders)
